rules-interpreter/target/generated-sources/antlr4/RuleFlowLanguageParser.java
// Generated from RuleFlowLanguage.g4 by ANTLR 4.9.2

package com.github.iamrenny.ruleflow;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RuleFlowLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STRING_NOT_SPECIAL_CHARS=1, DOT=2, COMMA=3, ADD=4, MINUS=5, MULTIPLY=6, 
		DIVIDE=7, LT=8, LT_EQ=9, GT=10, GT_EQ=11, EQ_IC=12, EQ=13, NOT_EQ=14, 
		MINUTE=15, HOUR=16, DAY=17, CURRENT_DATE=18, DATE_DIFF=19, ABS=20, REGEX_STRIP=21, 
		MODULO=22, K_STARTS_WITH=23, K_LIST=24, L_BRACE=25, R_BRACE=26, L_PAREN=27, 
		R_PAREN=28, K_COLON=29, K_ACTION=30, K_WORKFLOW=31, K_RULESET=32, K_RETURN=33, 
		K_THEN=34, K_DEFAULT=35, K_WITH=36, K_END=37, K_ELSE=38, K_AND=39, K_OR=40, 
		K_CONTAINS=41, K_IS=42, K_NOT=43, K_IS_NOT=44, K_IN=45, K_ANY=46, K_NONE=47, 
		K_ALL=48, K_COUNT=49, K_AVERAGE=50, K_DISTINCT=51, K_NULL=52, DAY_OF_WEEK=53, 
		K_EXPR=54, NUMERIC_LITERAL=55, BOOLEAN_LITERAL=56, DQUOTA_STRING=57, SQUOTA_STRING=58, 
		ID=59, SINGLE_LINE_COMMENT=60, MULTILINE_COMMENT=61, SPACES=62, UNEXPECTED_CHAR=63;
	public static final int
		RULE_parse = 0, RULE_error = 1, RULE_workflow = 2, RULE_workflow_name = 3, 
		RULE_string_literal = 4, RULE_rulesets = 5, RULE_rules = 6, RULE_rule_body = 7, 
		RULE_name = 8, RULE_default_clause = 9, RULE_return_result = 10, RULE_state = 11, 
		RULE_actions = 12, RULE_action = 13, RULE_action_params = 14, RULE_param_pairs = 15, 
		RULE_param_pair = 16, RULE_expr = 17, RULE_listElems = 18, RULE_validValue = 19, 
		RULE_validProperty = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "error", "workflow", "workflow_name", "string_literal", "rulesets", 
			"rules", "rule_body", "name", "default_clause", "return_result", "state", 
			"actions", "action", "action_params", "param_pairs", "param_pair", "expr", 
			"listElems", "validValue", "validProperty"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'.'", "','", "'+'", "'-'", "'*'", "'/'", "'<'", "'<='", 
			"'>'", "'>='", "'='", "'=='", "'<>'", "'minute'", "'hour'", "'day'", 
			null, null, "'abs'", null, null, null, "'list'", "'{'", "'}'", "'('", 
			"')'", "':'", "'action'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STRING_NOT_SPECIAL_CHARS", "DOT", "COMMA", "ADD", "MINUS", "MULTIPLY", 
			"DIVIDE", "LT", "LT_EQ", "GT", "GT_EQ", "EQ_IC", "EQ", "NOT_EQ", "MINUTE", 
			"HOUR", "DAY", "CURRENT_DATE", "DATE_DIFF", "ABS", "REGEX_STRIP", "MODULO", 
			"K_STARTS_WITH", "K_LIST", "L_BRACE", "R_BRACE", "L_PAREN", "R_PAREN", 
			"K_COLON", "K_ACTION", "K_WORKFLOW", "K_RULESET", "K_RETURN", "K_THEN", 
			"K_DEFAULT", "K_WITH", "K_END", "K_ELSE", "K_AND", "K_OR", "K_CONTAINS", 
			"K_IS", "K_NOT", "K_IS_NOT", "K_IN", "K_ANY", "K_NONE", "K_ALL", "K_COUNT", 
			"K_AVERAGE", "K_DISTINCT", "K_NULL", "DAY_OF_WEEK", "K_EXPR", "NUMERIC_LITERAL", 
			"BOOLEAN_LITERAL", "DQUOTA_STRING", "SQUOTA_STRING", "ID", "SINGLE_LINE_COMMENT", 
			"MULTILINE_COMMENT", "SPACES", "UNEXPECTED_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RuleFlowLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RuleFlowLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RuleFlowLanguageParser.EOF, 0); }
		public WorkflowContext workflow() {
			return getRuleContext(WorkflowContext.class,0);
		}
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleFlowLanguageVisitor ) return ((RuleFlowLanguageVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_WORKFLOW:
				{
				setState(42);
				workflow();
				}
				break;
			case UNEXPECTED_CHAR:
				{
				setState(43);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(46);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorContext extends ParserRuleContext {
		public Token UNEXPECTED_CHAR;
		public TerminalNode UNEXPECTED_CHAR() { return getToken(RuleFlowLanguageParser.UNEXPECTED_CHAR, 0); }
		public ErrorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_error; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).enterError(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).exitError(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleFlowLanguageVisitor ) return ((RuleFlowLanguageVisitor<? extends T>)visitor).visitError(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ErrorContext error() throws RecognitionException {
		ErrorContext _localctx = new ErrorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_error);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			((ErrorContext)_localctx).UNEXPECTED_CHAR = match(UNEXPECTED_CHAR);

			    throw new RuntimeException("UNEXPECTED_CHAR= " + (((ErrorContext)_localctx).UNEXPECTED_CHAR!=null?((ErrorContext)_localctx).UNEXPECTED_CHAR.getText():null));

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WorkflowContext extends ParserRuleContext {
		public TerminalNode K_WORKFLOW() { return getToken(RuleFlowLanguageParser.K_WORKFLOW, 0); }
		public Workflow_nameContext workflow_name() {
			return getRuleContext(Workflow_nameContext.class,0);
		}
		public Default_clauseContext default_clause() {
			return getRuleContext(Default_clauseContext.class,0);
		}
		public TerminalNode K_END() { return getToken(RuleFlowLanguageParser.K_END, 0); }
		public List<RulesetsContext> rulesets() {
			return getRuleContexts(RulesetsContext.class);
		}
		public RulesetsContext rulesets(int i) {
			return getRuleContext(RulesetsContext.class,i);
		}
		public WorkflowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_workflow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).enterWorkflow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).exitWorkflow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleFlowLanguageVisitor ) return ((RuleFlowLanguageVisitor<? extends T>)visitor).visitWorkflow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WorkflowContext workflow() throws RecognitionException {
		WorkflowContext _localctx = new WorkflowContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_workflow);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(K_WORKFLOW);
			setState(52);
			workflow_name();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==K_RULESET) {
				{
				{
				setState(53);
				rulesets();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			default_clause();
			setState(60);
			match(K_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Workflow_nameContext extends ParserRuleContext {
		public TerminalNode STRING_NOT_SPECIAL_CHARS() { return getToken(RuleFlowLanguageParser.STRING_NOT_SPECIAL_CHARS, 0); }
		public Workflow_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_workflow_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).enterWorkflow_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).exitWorkflow_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleFlowLanguageVisitor ) return ((RuleFlowLanguageVisitor<? extends T>)visitor).visitWorkflow_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Workflow_nameContext workflow_name() throws RecognitionException {
		Workflow_nameContext _localctx = new Workflow_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_workflow_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(STRING_NOT_SPECIAL_CHARS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_literalContext extends ParserRuleContext {
		public TerminalNode STRING_NOT_SPECIAL_CHARS() { return getToken(RuleFlowLanguageParser.STRING_NOT_SPECIAL_CHARS, 0); }
		public TerminalNode SQUOTA_STRING() { return getToken(RuleFlowLanguageParser.SQUOTA_STRING, 0); }
		public String_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).enterString_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).exitString_literal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleFlowLanguageVisitor ) return ((RuleFlowLanguageVisitor<? extends T>)visitor).visitString_literal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final String_literalContext string_literal() throws RecognitionException {
		String_literalContext _localctx = new String_literalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_string_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_la = _input.LA(1);
			if ( !(_la==STRING_NOT_SPECIAL_CHARS || _la==SQUOTA_STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesetsContext extends ParserRuleContext {
		public TerminalNode K_RULESET() { return getToken(RuleFlowLanguageParser.K_RULESET, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<RulesContext> rules() {
			return getRuleContexts(RulesContext.class);
		}
		public RulesContext rules(int i) {
			return getRuleContext(RulesContext.class,i);
		}
		public RulesetsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rulesets; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).enterRulesets(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).exitRulesets(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleFlowLanguageVisitor ) return ((RuleFlowLanguageVisitor<? extends T>)visitor).visitRulesets(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RulesetsContext rulesets() throws RecognitionException {
		RulesetsContext _localctx = new RulesetsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rulesets);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(K_RULESET);
			setState(67);
			name();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STRING_NOT_SPECIAL_CHARS || _la==SQUOTA_STRING) {
				{
				{
				setState(68);
				rules();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Rule_bodyContext rule_body() {
			return getRuleContext(Rule_bodyContext.class,0);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).enterRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).exitRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleFlowLanguageVisitor ) return ((RuleFlowLanguageVisitor<? extends T>)visitor).visitRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rules);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			name();
			setState(75);
			rule_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rule_bodyContext extends ParserRuleContext {
		public ActionsContext then_result;
		public Return_resultContext result;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode K_THEN() { return getToken(RuleFlowLanguageParser.K_THEN, 0); }
		public TerminalNode K_RETURN() { return getToken(RuleFlowLanguageParser.K_RETURN, 0); }
		public ActionsContext actions() {
			return getRuleContext(ActionsContext.class,0);
		}
		public Return_resultContext return_result() {
			return getRuleContext(Return_resultContext.class,0);
		}
		public TerminalNode K_WITH() { return getToken(RuleFlowLanguageParser.K_WITH, 0); }
		public TerminalNode K_AND() { return getToken(RuleFlowLanguageParser.K_AND, 0); }
		public Rule_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).enterRule_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).exitRule_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleFlowLanguageVisitor ) return ((RuleFlowLanguageVisitor<? extends T>)visitor).visitRule_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rule_bodyContext rule_body() throws RecognitionException {
		Rule_bodyContext _localctx = new Rule_bodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rule_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			expr(0);
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_THEN:
				{
				{
				setState(78);
				match(K_THEN);
				setState(80);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(79);
					_la = _input.LA(1);
					if ( !(_la==K_WITH || _la==K_AND) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					break;
				}
				setState(82);
				((Rule_bodyContext)_localctx).then_result = actions();
				}
				}
				break;
			case K_RETURN:
				{
				{
				setState(83);
				match(K_RETURN);
				setState(84);
				((Rule_bodyContext)_localctx).result = return_result();
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << K_ACTION) | (1L << K_WITH) | (1L << K_AND) | (1L << ID))) != 0)) {
					{
					setState(85);
					actions();
					}
				}

				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public String_literalContext string_literal() {
			return getRuleContext(String_literalContext.class,0);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleFlowLanguageVisitor ) return ((RuleFlowLanguageVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			string_literal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Default_clauseContext extends ParserRuleContext {
		public Return_resultContext default_result;
		public TerminalNode K_DEFAULT() { return getToken(RuleFlowLanguageParser.K_DEFAULT, 0); }
		public Return_resultContext return_result() {
			return getRuleContext(Return_resultContext.class,0);
		}
		public ActionsContext actions() {
			return getRuleContext(ActionsContext.class,0);
		}
		public TerminalNode K_THEN() { return getToken(RuleFlowLanguageParser.K_THEN, 0); }
		public TerminalNode K_RETURN() { return getToken(RuleFlowLanguageParser.K_RETURN, 0); }
		public Default_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_default_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).enterDefault_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RuleFlowLanguageListener ) ((RuleFlowLanguageListener)listener).exitDefault_clause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RuleFlowLanguageVisitor ) return ((RuleFlowLanguageVisitor<? extends T>)visitor).visitDefault_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Default_clauseContext default_clause() throws RecognitionException {
		Default_clauseContext _localctx = new Default_clauseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_default_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(K_DEFAULT);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==K_RETURN || _la==K_THEN) {
				{
				setState(93);
				_la = _input.LA(1);
				if ( !(_la==K_RETURN || _la==K_THEN) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(96);
			((Default_clauseContext)_localctx).default_result = return_result();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << K_ACTION) | (1L << K_WITH) | (1L << K_AND) | (1L << ID))) != 0)) {
				{
				setState(97);
				actions();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
